Set an error when loading a GtkIconInfo fails

Failure to do so leads to assertion failures.
https://bugzilla.gnome.org/show_bug.cgi?id=710073